# CRUD-PostgreSQL

./: .gitignore  README.md  main.py  pyproject.toml
